# systematicity-entropy

./: README.md  pyproject.toml
data/: README.md
data/experiment1/: high_05.txt  high_10.txt  high_15.txt  high_20.txt  high_25.txt  high_degenerate.txt  high_uniform.txt  low_05.txt  low_10.txt  low_15.txt  low_20.txt  low_25.txt  low_degenerate.txt  low_uniform.txt  medium_05.txt  medium_10.txt  medium_15.txt  medium_20.txt  medium_25.txt  medium_degenerate.txt  medium_uniform.txt  test.txt
data/experiment2/: full_1_7.txt  full_2_7.txt  full_3_7.txt  full_4_7.txt  test.txt
example_scripts/: example_train.sh  exp1_cnn_eval.sh  exp1_cnn_train.sh  exp1_rnn_eval.sh  exp1_rnn_train.sh  exp1_transformer_eval.sh  exp1_transformer_learned_train.sh  exp1_transformer_train.sh  exp2_cnn_eval.sh  exp2_cnn_train.sh  exp2_rnn_eval.sh  exp2_rnn_train.sh  exp2_transformer_eval.sh  exp2_transformer_train.sh  sweep_cnn_experiment1.sh  sweep_cnn_experiment2.sh  sweep_positional_experiment1_relative.sh  sweep_positional_experiment1_rope.sh  sweep_rnn_2.sh  sweep_rnn_experiment1.sh  sweep_rnn_experiment2.sh  sweep_transformer_experiment1.sh  sweep_transformer_experiment2.sh
grammars/: README.md  test_grammar.cfg  train_1_7.cfg  train_2_7.cfg  train_3_7.cfg  train_4_7.cfg  train_5_7.cfg  train_6_7.cfg  train_7_7.cfg  train_8_7.cfg
static/: scan_tokenizer.json
systematicity_entropy/: PCFG.py  dataset.py  eval.py  eval_cnn.py  eval_rnn.py  make_scan_data.py  train.py  train_cnn.py  train_rnn.py  utils.py
systematicity_entropy/models/: cnn.py  rnn.py  transformer.py  (+3 more)
